--- a/Mandatory2DGameFramework/Mandatory2DGameFramework.csproj
+++ b/Mandatory2DGameFramework/Mandatory2DGameFramework.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<PackageId>CAKI.GameFramework</PackageId>
+	<Version> 1.1.0</Version>
+	<Authors>Casper Kiens</Authors>
+	<Product>GameFramework</Product>
   </PropertyGroup>
 
   <ItemGroup>
